Fim do curso Data Science: introdução a testes estatísticos com python

--- a/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
+++ b/Data_Science-Introducao_testes_estatisticos_com_python/Data_Science-introducao_a_testes.ipynb
@@ -4096,7 +4096,9 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "Fim do curso"
+   ],
    "metadata": {}
   }
  ],
