--- a/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
+++ b/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "source": [
     "import pandas as pd"
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
     "import numpy as np"
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "source": [
     "ensaios = np.array([[-1, -1], [1, -1], [-1, 1], [1, 1]])"
    ],
@@ -151,17 +151,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Collecting pyDOE2\n",
-      "  Downloading pyDOE2-1.3.0.tar.gz (19 kB)\n",
+      "Requirement already satisfied: pyDOE2 in /home/yorinori/anaconda3/lib/python3.8/site-packages (1.3.0)\n",
       "Requirement already satisfied: numpy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from pyDOE2) (1.18.5)\n",
-      "Requirement already satisfied: scipy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from pyDOE2) (1.5.0)\n",
-      "Building wheels for collected packages: pyDOE2\n",
-      "  Building wheel for pyDOE2 (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pyDOE2: filename=pyDOE2-1.3.0-py3-none-any.whl size=25517 sha256=b16373c645d0dce42a131454b715543572943289ee8a46a5d0388aad495e1248\n",
-      "  Stored in directory: /home/yorinori/.cache/pip/wheels/a7/de/26/98f9a9ff6082bdd6f2c003c6471f0fa7536b1ddd24dc2997e9\n",
-      "Successfully built pyDOE2\n",
-      "Installing collected packages: pyDOE2\n",
-      "Successfully installed pyDOE2-1.3.0\n"
+      "Requirement already satisfied: scipy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from pyDOE2) (1.5.0)\n"
      ]
     }
    ],
@@ -169,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "import pyDOE2 as doe"
    ],
@@ -185,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "source": [
     "ensaios = doe.ff2n(2)"
    ],
@@ -194,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "source": [
     "ensaios"
    ],
@@ -210,7 +202,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 9
     }
    ],
    "metadata": {}
@@ -224,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "source": [
     "experimento = pd.DataFrame(ensaios, columns= [\"Farinha\", \"Chocolate\"])"
    ],
@@ -233,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "source": [
     "experimento"
    ],
@@ -298,7 +290,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 11
     }
    ],
    "metadata": {}
@@ -312,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "source": [
     "experimento['Porcoes'] = [19, 37, 24, 49]"
    ],
@@ -321,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "source": [
     "experimento"
    ],
@@ -391,7 +383,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 13
     }
    ],
    "metadata": {}
@@ -430,16 +422,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "source": [
     "import seaborn as sns"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "source": [
     "# paletas -> Accent, Accent_r, Blues, Blues_r, BrBG, BrBG_r, BuGn, BuGn_r, BuPu, BuPu_r, CMRmap, CMRmap_r, Dark2, Dark2_r, GnBu, GnBu_r, Greens, Greens_r, Greys, Greys_r, OrRd, OrRd_r, Oranges, Oranges_r, PRGn, PRGn_r, Paired, Paired_r, Pastel1, Pastel1_r, Pastel2, Pastel2_r, PiYG, PiYG_r, PuBu, PuBuGn, PuBuGn_r, PuBu_r, PuOr, PuOr_r, PuRd, PuRd_r, Purples, Purples_r, RdBu, RdBu_r, RdGy, RdGy_r, RdPu, RdPu_r, RdYlBu, RdYlBu_r, RdYlGn, RdYlGn_r, Reds, Reds_r, Set1, Set1_r, Set2, Set2_r, Set3, Set3_r, Spectral, Spectral_r, Wistia, Wistia_r, YlGn, YlGnBu, YlGnBu_r, YlGn_r, YlOrBr, YlOrBr_r, YlOrRd, YlOrRd_r, afmhot, afmhot_r, autumn, autumn_r, binary, binary_r, bone, bone_r, brg, brg_r, bwr, bwr_r, cividis, cividis_r, cool, cool_r, coolwarm, coolwarm_r, copper, copper_r, cubehelix, cubehelix_r, flag, flag_r, gist_earth, gist_earth_r, gist_gray, gist_gray_r, gist_heat, gist_heat_r, gist_ncar, gist_ncar_r, gist_rainbow, gist_rainbow_r, gist_stern, gist_stern_r, gist_yarg, gist_yarg_r, gnuplot, gnuplot2, gnuplot2_r, gnuplot_r, gray, gray_r, hot, hot_r, hsv, hsv_r, icefire, icefire_r, inferno, inferno_r, jet, jet_r, magma, magma_r, mako, mako_r, nipy_spectral, nipy_spectral_r, ocean, ocean_r, pink, pink_r, plasma, plasma_r, prism, prism_r, rainbow, rainbow_r, rocket, rocket_r, seismic, seismic_r, spring, spring_r, summer, summer_r, tab10, tab10_r, tab20, tab20_r, tab20b, tab20b_r, tab20c, tab20c_r, terrain, terrain_r, viridis, viridis_r, vlag, vlag_r, winter, winter_r\n",
     "sns.set_palette('terrain')\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "source": [
     "ax1 = sns.lmplot(data=experimento, x='Farinha', y='Porcoes', ci=None, hue='Chocolate')\n",
     "ax1.set(xticks=(-1, 1))"
@@ -469,11 +469,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f00fa759ee0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fc64817cee0>"
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 16
     },
     {
      "output_type": "display_data",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "source": [
     "ax2 = sns.lmplot(data=experimento, x='Chocolate', y='Porcoes', ci=None, hue='Farinha')\n",
     "ax2.set(xticks=(-1, 1))"
@@ -507,11 +507,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f00fc86f670>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fc61b31b5e0>"
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 17
     },
     {
      "output_type": "display_data",
@@ -560,8 +560,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 18,
+   "source": [
+    "import statsmodels.api as sm \n",
+    "import statsmodels.formula.api as smf"
+   ],
    "outputs": [],
    "metadata": {}
   },
@@ -574,23 +577,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 19,
+   "source": [
+    "modelo = smf.ols(data=experimento, formula='Porcoes ~ Farinha + Chocolate + Farinha : Chocolate')"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 20,
+   "source": [
+    "modelo_ajustado = modelo.fit()"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 21,
+   "source": [
+    "print(modelo_ajustado.summary())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                Porcoes   R-squared:                       1.000\n",
+      "Model:                            OLS   Adj. R-squared:                    nan\n",
+      "Method:                 Least Squares   F-statistic:                       nan\n",
+      "Date:                Tue, 19 Apr 2022   Prob (F-statistic):                nan\n",
+      "Time:                        13:11:56   Log-Likelihood:                 126.02\n",
+      "No. Observations:                   4   AIC:                            -244.0\n",
+      "Df Residuals:                       0   BIC:                            -246.5\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=====================================================================================\n",
+      "                        coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------\n",
+      "Intercept            32.2500        inf          0        nan         nan         nan\n",
+      "Farinha              10.7500        inf          0        nan         nan         nan\n",
+      "Chocolate             4.2500        inf          0        nan         nan         nan\n",
+      "Farinha:Chocolate     1.7500        inf          0        nan         nan         nan\n",
+      "==============================================================================\n",
+      "Omnibus:                          nan   Durbin-Watson:                   1.500\n",
+      "Prob(Omnibus):                    nan   Jarque-Bera (JB):                0.167\n",
+      "Skew:                           0.000   Prob(JB):                        0.920\n",
+      "Kurtosis:                       2.000   Cond. No.                         1.00\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/statsmodels/stats/stattools.py:74: ValueWarning: omni_normtest is not valid with less than 8 observations; 4 samples were given.\n",
+      "  warn(\"omni_normtest is not valid with less than 8 observations; %i \"\n",
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/statsmodels/regression/linear_model.py:1749: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  return 1 - (np.divide(self.nobs - self.k_constant, self.df_resid)\n",
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/statsmodels/regression/linear_model.py:1749: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  return 1 - (np.divide(self.nobs - self.k_constant, self.df_resid)\n",
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/statsmodels/regression/linear_model.py:1671: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  return np.dot(wresid, wresid) / self.df_resid\n",
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/statsmodels/base/model.py:1512: RuntimeWarning: invalid value encountered in multiply\n",
+      "  cov_p = self.normalized_cov_params * scale\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
