--- a/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
+++ b/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
@@ -918,23 +918,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 60,
+   "source": [
+    "modelo = smf.ols(data=experimento, formula='Porcoes ~ Farinha + Chocolate + Farinha : Chocolate')"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 61,
+   "source": [
+    "modelo_ajustado = modelo.fit()"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 62,
+   "source": [
+    "print(modelo_ajustado.summary())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                Porcoes   R-squared:                       0.971\n",
+      "Model:                            OLS   Adj. R-squared:                  0.950\n",
+      "Method:                 Least Squares   F-statistic:                     45.21\n",
+      "Date:                Tue, 19 Apr 2022   Prob (F-statistic):            0.00152\n",
+      "Time:                        15:28:56   Log-Likelihood:                -14.155\n",
+      "No. Observations:                   8   AIC:                             36.31\n",
+      "Df Residuals:                       4   BIC:                             36.63\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=====================================================================================\n",
+      "                        coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------\n",
+      "Intercept            30.8750      0.710     43.494      0.000      28.904      32.846\n",
+      "Farinha              10.7500      1.004     10.708      0.000       7.963      13.537\n",
+      "Chocolate             4.2500      1.004      4.233      0.013       1.463       7.037\n",
+      "Farinha:Chocolate     1.7500      1.004      1.743      0.156      -1.037       4.537\n",
+      "==============================================================================\n",
+      "Omnibus:                        4.655   Durbin-Watson:                   0.841\n",
+      "Prob(Omnibus):                  0.098   Jarque-Bera (JB):                1.080\n",
+      "Skew:                          -0.180   Prob(JB):                        0.583\n",
+      "Kurtosis:                       1.237   Cond. No.                         1.41\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:1603: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=8\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
