--- a/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
+++ b/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "source": [
     "import pandas as pd"
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "source": [
     "import numpy as np"
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "source": [
     "ensaios = np.array([[-1, -1], [1, -1], [-1, 1], [1, 1]])"
    ],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "source": [
     "!pip install pyDOE2"
    ],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "source": [
     "import pyDOE2 as doe"
    ],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "source": [
     "ensaios = doe.ff2n(2)"
    ],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "source": [
     "ensaios"
    ],
@@ -202,7 +202,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 7
     }
    ],
    "metadata": {}
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "source": [
     "experimento = pd.DataFrame(ensaios, columns= [\"Farinha\", \"Chocolate\"])"
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "source": [
     "experimento"
    ],
@@ -290,7 +290,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 9
     }
    ],
    "metadata": {}
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "source": [
     "experimento['Porcoes'] = [19, 37, 24, 49]"
    ],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "source": [
     "experimento"
    ],
@@ -383,7 +383,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 11
     }
    ],
    "metadata": {}
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "source": [
     "import seaborn as sns"
    ],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "source": [
     "# paletas -> Accent, Accent_r, Blues, Blues_r, BrBG, BrBG_r, BuGn, BuGn_r, BuPu, BuPu_r, CMRmap, CMRmap_r, Dark2, Dark2_r, GnBu, GnBu_r, Greens, Greens_r, Greys, Greys_r, OrRd, OrRd_r, Oranges, Oranges_r, PRGn, PRGn_r, Paired, Paired_r, Pastel1, Pastel1_r, Pastel2, Pastel2_r, PiYG, PiYG_r, PuBu, PuBuGn, PuBuGn_r, PuBu_r, PuOr, PuOr_r, PuRd, PuRd_r, Purples, Purples_r, RdBu, RdBu_r, RdGy, RdGy_r, RdPu, RdPu_r, RdYlBu, RdYlBu_r, RdYlGn, RdYlGn_r, Reds, Reds_r, Set1, Set1_r, Set2, Set2_r, Set3, Set3_r, Spectral, Spectral_r, Wistia, Wistia_r, YlGn, YlGnBu, YlGnBu_r, YlGn_r, YlOrBr, YlOrBr_r, YlOrRd, YlOrRd_r, afmhot, afmhot_r, autumn, autumn_r, binary, binary_r, bone, bone_r, brg, brg_r, bwr, bwr_r, cividis, cividis_r, cool, cool_r, coolwarm, coolwarm_r, copper, copper_r, cubehelix, cubehelix_r, flag, flag_r, gist_earth, gist_earth_r, gist_gray, gist_gray_r, gist_heat, gist_heat_r, gist_ncar, gist_ncar_r, gist_rainbow, gist_rainbow_r, gist_stern, gist_stern_r, gist_yarg, gist_yarg_r, gnuplot, gnuplot2, gnuplot2_r, gnuplot_r, gray, gray_r, hot, hot_r, hsv, hsv_r, icefire, icefire_r, inferno, inferno_r, jet, jet_r, magma, magma_r, mako, mako_r, nipy_spectral, nipy_spectral_r, ocean, ocean_r, pink, pink_r, plasma, plasma_r, prism, prism_r, rainbow, rainbow_r, rocket, rocket_r, seismic, seismic_r, spring, spring_r, summer, summer_r, tab10, tab10_r, tab20, tab20_r, tab20b, tab20b_r, tab20c, tab20c_r, terrain, terrain_r, viridis, viridis_r, vlag, vlag_r, winter, winter_r\n",
     "sns.set_palette('terrain')\n",
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "source": [
     "ax1 = sns.lmplot(data=experimento, x='Farinha', y='Porcoes', ci=None, hue='Chocolate')\n",
     "ax1.set(xticks=(-1, 1))"
@@ -461,11 +461,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fc616d0df10>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f52a42e1ca0>"
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 14
     },
     {
      "output_type": "display_data",
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "source": [
     "ax2 = sns.lmplot(data=experimento, x='Chocolate', y='Porcoes', ci=None, hue='Farinha')\n",
     "ax2.set(xticks=(-1, 1))"
@@ -499,11 +499,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fc616d0dac0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f52a42e1c70>"
       ]
      },
      "metadata": {},
-     "execution_count": 49
+     "execution_count": 15
     },
     {
      "output_type": "display_data",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "source": [
     "import statsmodels.api as sm \n",
     "import statsmodels.formula.api as smf"
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "source": [
     "modelo = smf.ols(data=experimento, formula='Porcoes ~ Farinha + Chocolate + Farinha : Chocolate')"
    ],
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "source": [
     "modelo_ajustado = modelo.fit()"
    ],
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "source": [
     "print(modelo_ajustado.summary())"
    ],
@@ -601,8 +601,8 @@
       "Dep. Variable:                Porcoes   R-squared:                       1.000\n",
       "Model:                            OLS   Adj. R-squared:                    nan\n",
       "Method:                 Least Squares   F-statistic:                       nan\n",
-      "Date:                Tue, 19 Apr 2022   Prob (F-statistic):                nan\n",
-      "Time:                        15:26:14   Log-Likelihood:                 126.02\n",
+      "Date:                Wed, 20 Apr 2022   Prob (F-statistic):                nan\n",
+      "Time:                        21:53:04   Log-Likelihood:                 126.02\n",
       "No. Observations:                   4   AIC:                            -244.0\n",
       "Df Residuals:                       0   BIC:                            -246.5\n",
       "Df Model:                           3                                         \n",
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "source": [
     "centro = np.array([[0, 0, 29],\n",
     "                   [0, 0, 30],\n",
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "source": [
     "centro_dataframe = pd.DataFrame(centro, columns=['Farinha', 'Chocolate', 'Porcoes'], index=[4, 5, 6, 7])"
    ],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "source": [
     "centro_dataframe"
    ],
@@ -778,7 +778,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 56
+     "execution_count": 22
     }
    ],
    "metadata": {}
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "source": [
     "experimento = experimento.append(centro_dataframe)"
    ],
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "source": [
     "experimento"
    ],
@@ -899,7 +899,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 24
     }
    ],
    "metadata": {}
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "source": [
     "modelo = smf.ols(data=experimento, formula='Porcoes ~ Farinha + Chocolate + Farinha : Chocolate')"
    ],
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "source": [
     "modelo_ajustado = modelo.fit()"
    ],
@@ -936,11 +936,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "source": [
     "print(modelo_ajustado.summary())"
    ],
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:1603: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=8\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
+     ]
+    },
     {
      "output_type": "stream",
      "name": "stdout",
@@ -950,8 +958,8 @@
       "Dep. Variable:                Porcoes   R-squared:                       0.971\n",
       "Model:                            OLS   Adj. R-squared:                  0.950\n",
       "Method:                 Least Squares   F-statistic:                     45.21\n",
-      "Date:                Tue, 19 Apr 2022   Prob (F-statistic):            0.00152\n",
-      "Time:                        15:28:56   Log-Likelihood:                -14.155\n",
+      "Date:                Wed, 20 Apr 2022   Prob (F-statistic):            0.00152\n",
+      "Time:                        21:53:04   Log-Likelihood:                -14.155\n",
       "No. Observations:                   8   AIC:                             36.31\n",
       "Df Residuals:                       4   BIC:                             36.63\n",
       "Df Model:                           3                                         \n",
@@ -972,14 +980,6 @@
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/home/yorinori/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:1603: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=8\n",
-      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
      ]
     }
    ],
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "source": [
     "t_valores = modelo_ajustado.tvalues"
    ],
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "source": [
     "t_valores"
    ],
@@ -1096,14 +1096,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 66
+     "execution_count": 29
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "source": [
     "nome = t_valores.index.tolist()"
    ],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "source": [
     "nome"
    ],
@@ -1125,7 +1125,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 68
+     "execution_count": 31
     }
    ],
    "metadata": {}
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "source": [
     "from scipy import stats"
    ],
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "source": [
     "distribuicao = stats.t(df=4)"
    ],
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "source": [
     "distribuicao.ppf(q=1 - 0.025)"
    ],
@@ -1177,14 +1177,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 34
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "source": [
     "limite = [distribuicao.ppf(q=1 - 0.025)] * len(nome)"
    ],
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "source": [
     "limite"
    ],
@@ -1209,7 +1209,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 36
     }
    ],
    "metadata": {}
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "source": [
     "pareto = sns.barplot(x=t_valores, y=nome)\n",
     "pareto.figure.set_size_inches(15, 6)\n",
@@ -1237,11 +1237,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc6161f2790>]"
+       "[<matplotlib.lines.Line2D at 0x7f529dca8910>]"
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 37
     },
     {
      "output_type": "display_data",
@@ -1303,23 +1303,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 38,
+   "source": [
+    "modelo_2 = smf.ols(data = experimento, formula='Porcoes ~ Farinha + Chocolate')"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 39,
+   "source": [
+    "modelo_ajustado_2 = modelo_2.fit()"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 40,
+   "source": [
+    "print(modelo_ajustado_2.summary())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                Porcoes   R-squared:                       0.950\n",
+      "Model:                            OLS   Adj. R-squared:                  0.929\n",
+      "Method:                 Least Squares   F-statistic:                     47.09\n",
+      "Date:                Wed, 20 Apr 2022   Prob (F-statistic):           0.000571\n",
+      "Time:                        21:57:18   Log-Likelihood:                -16.416\n",
+      "No. Observations:                   8   AIC:                             38.83\n",
+      "Df Residuals:                       5   BIC:                             39.07\n",
+      "Df Model:                           2                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "Intercept     30.8750      0.842     36.658      0.000      28.710      33.040\n",
+      "Farinha       10.7500      1.191      9.025      0.000       7.688      13.812\n",
+      "Chocolate      4.2500      1.191      3.568      0.016       1.188       7.312\n",
+      "==============================================================================\n",
+      "Omnibus:                        2.106   Durbin-Watson:                   1.850\n",
+      "Prob(Omnibus):                  0.349   Jarque-Bera (JB):                1.245\n",
+      "Skew:                           0.868   Prob(JB):                        0.537\n",
+      "Kurtosis:                       2.153   Cond. No.                         1.41\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:1603: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=8\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
