--- a/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
+++ b/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
@@ -152,8 +152,8 @@
      "name": "stdout",
      "text": [
       "Requirement already satisfied: pyDOE2 in /home/yorinori/anaconda3/lib/python3.8/site-packages (1.3.0)\n",
-      "Requirement already satisfied: numpy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from pyDOE2) (1.18.5)\n",
-      "Requirement already satisfied: scipy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from pyDOE2) (1.5.0)\n"
+      "Requirement already satisfied: scipy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from pyDOE2) (1.5.0)\n",
+      "Requirement already satisfied: numpy in /home/yorinori/anaconda3/lib/python3.8/site-packages (from pyDOE2) (1.18.5)\n"
      ]
     }
    ],
@@ -461,7 +461,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f52a42e1ca0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7ff49c3b1640>"
       ]
      },
      "metadata": {},
@@ -499,7 +499,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f52a42e1c70>"
+       "<seaborn.axisgrid.FacetGrid at 0x7ff470424790>"
       ]
      },
      "metadata": {},
@@ -601,8 +601,8 @@
       "Dep. Variable:                Porcoes   R-squared:                       1.000\n",
       "Model:                            OLS   Adj. R-squared:                    nan\n",
       "Method:                 Least Squares   F-statistic:                       nan\n",
-      "Date:                Wed, 20 Apr 2022   Prob (F-statistic):                nan\n",
-      "Time:                        21:53:04   Log-Likelihood:                 126.02\n",
+      "Date:                Thu, 21 Apr 2022   Prob (F-statistic):                nan\n",
+      "Time:                        23:53:03   Log-Likelihood:                 126.02\n",
       "No. Observations:                   4   AIC:                            -244.0\n",
       "Df Residuals:                       0   BIC:                            -246.5\n",
       "Df Model:                           3                                         \n",
@@ -943,14 +943,6 @@
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/home/yorinori/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:1603: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=8\n",
-      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
-     ]
-    },
-    {
-     "output_type": "stream",
      "name": "stdout",
      "text": [
       "                            OLS Regression Results                            \n",
@@ -958,8 +950,8 @@
       "Dep. Variable:                Porcoes   R-squared:                       0.971\n",
       "Model:                            OLS   Adj. R-squared:                  0.950\n",
       "Method:                 Least Squares   F-statistic:                     45.21\n",
-      "Date:                Wed, 20 Apr 2022   Prob (F-statistic):            0.00152\n",
-      "Time:                        21:53:04   Log-Likelihood:                -14.155\n",
+      "Date:                Thu, 21 Apr 2022   Prob (F-statistic):            0.00152\n",
+      "Time:                        23:53:03   Log-Likelihood:                -14.155\n",
       "No. Observations:                   8   AIC:                             36.31\n",
       "Df Residuals:                       4   BIC:                             36.63\n",
       "Df Model:                           3                                         \n",
@@ -980,6 +972,14 @@
       "\n",
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/scipy/stats/stats.py:1603: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=8\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
      ]
     }
    ],
@@ -1237,7 +1237,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f529dca8910>]"
+       "[<matplotlib.lines.Line2D at 0x7ff469bee8e0>]"
       ]
      },
      "metadata": {},
@@ -1335,8 +1335,8 @@
       "Dep. Variable:                Porcoes   R-squared:                       0.950\n",
       "Model:                            OLS   Adj. R-squared:                  0.929\n",
       "Method:                 Least Squares   F-statistic:                     47.09\n",
-      "Date:                Wed, 20 Apr 2022   Prob (F-statistic):           0.000571\n",
-      "Time:                        21:57:18   Log-Likelihood:                -16.416\n",
+      "Date:                Thu, 21 Apr 2022   Prob (F-statistic):           0.000571\n",
+      "Time:                        23:53:04   Log-Likelihood:                -16.416\n",
       "No. Observations:                   8   AIC:                             38.83\n",
       "Df Residuals:                       5   BIC:                             39.07\n",
       "Df Model:                           2                                         \n",
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "source": [
     "t_valores = modelo_ajustado_2.tvalues"
    ],
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "source": [
     "t_valores"
    ],
@@ -1415,14 +1415,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 42
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "source": [
     "nome = t_valores.index.tolist()"
    ],
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "source": [
     "nome"
    ],
@@ -1444,7 +1444,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 44
     }
    ],
    "metadata": {}
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "source": [
     "distribuicao = stats.t(df=5)"
    ],
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "source": [
     "distribuicao.ppf(q = 1 - 0.025)"
    ],
@@ -1480,14 +1480,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 50
+     "execution_count": 46
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "source": [
     "limite = [distribuicao.ppf(q = 1 - 0.025)] * len(nome)"
    ],
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "source": [
     "\n",
     "pareto = sns.barplot(x=t_valores, y=nome)\n",
@@ -1517,11 +1517,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f52a39b1fa0>]"
+       "[<matplotlib.lines.Line2D at 0x7ff4699cfb20>]"
       ]
      },
      "metadata": {},
-     "execution_count": 52
+     "execution_count": 48
     },
     {
      "output_type": "display_data",
@@ -1546,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "source": [
     "observados = experimento['Porcoes']"
    ],
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "source": [
     "observados"
    ],
@@ -1576,7 +1576,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 55
+     "execution_count": 50
     }
    ],
    "metadata": {}
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 51,
    "source": [
     "preditos = modelo_ajustado_2.predict()"
    ],
@@ -1599,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 52,
    "source": [
     "preditos"
    ],
@@ -1612,7 +1612,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 52
     }
    ],
    "metadata": {}
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "source": [
     "import matplotlib.pyplot as plt"
    ],
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 54,
    "source": [
     "plt.figure(figsize = (10, 5))\n",
     "plt.xlabel('Preditos', fontsize=16)\n",
@@ -1657,11 +1657,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f529cdb49a0>"
+       "<matplotlib.collections.PathCollection at 0x7ff46a103a60>"
       ]
      },
      "metadata": {},
-     "execution_count": 63
+     "execution_count": 54
     },
     {
      "output_type": "display_data",
@@ -1685,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 55,
    "source": [
     "print(modelo_ajustado_2.summary())"
    ],
@@ -1699,8 +1699,8 @@
       "Dep. Variable:                Porcoes   R-squared:                       0.950\n",
       "Model:                            OLS   Adj. R-squared:                  0.929\n",
       "Method:                 Least Squares   F-statistic:                     47.09\n",
-      "Date:                Wed, 20 Apr 2022   Prob (F-statistic):           0.000571\n",
-      "Time:                        22:20:36   Log-Likelihood:                -16.416\n",
+      "Date:                Thu, 21 Apr 2022   Prob (F-statistic):           0.000571\n",
+      "Time:                        23:53:04   Log-Likelihood:                -16.416\n",
       "No. Observations:                   8   AIC:                             38.83\n",
       "Df Residuals:                       5   BIC:                             39.07\n",
       "Df Model:                           2                                         \n",
@@ -1754,16 +1754,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 56,
+   "source": [
+    "parametros = modelo_ajustado_2.params"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 57,
+   "source": [
+    "parametros"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Intercept    30.875\n",
+       "Farinha      10.750\n",
+       "Chocolate     4.250\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 57
+    }
+   ],
    "metadata": {}
   },
   {
@@ -1782,18 +1800,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "source": [
-    "\n"
+    "def modelo_receita(x_f, x_c):\n",
+    "    porcoes = parametros['Intercept'] + parametros['Farinha'] * x_f + parametros['Chocolate'] * x_c\n",
+    "    return round(porcoes)\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 61,
+   "source": [
+    "modelo_receita(-1, -1)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "16.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 61
+    }
+   ],
    "metadata": {}
   },
   {
