--- a/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
+++ b/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
@@ -1800,10 +1800,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "source": [
     "def modelo_receita(x_f, x_c):\n",
-    "    porcoes = parametros['Intercept'] + parametros['Farinha'] * x_f + parametros['Chocolate'] * x_c\n",
+    "    # limite\n",
+    "    limite_normalizado = [-1, 1]\n",
+    "    limite_farinha = [0.5, 1.5]\n",
+    "    limite_chocolate = [0.1, 0.5]\n",
+    "\n",
+    "    # Converter\n",
+    "    x_f_convertido = np.interp(x_f, limite_farinha, limite_normalizado)\n",
+    "    x_c_convertido = np.interp(x_c, limite_chocolate, limite_normalizado)\n",
+    "\n",
+    "    # Cálculo\n",
+    "    porcoes = parametros['Intercept'] + parametros['Farinha'] * x_f_convertido + parametros['Chocolate'] * x_c_convertido\n",
     "    return round(porcoes)\n"
    ],
    "outputs": [],
@@ -1811,20 +1821,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "source": [
-    "modelo_receita(-1, -1)"
+    "modelo_receita(0.6, 0.1)"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "16.0"
+       "18.0"
       ]
      },
      "metadata": {},
-     "execution_count": 61
+     "execution_count": 65
     }
    ],
    "metadata": {}
