--- a/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
+++ b/Introducao_a_experimentacao-analise_de_experimentos/Planejamento_experimentos_aula.ipynb
@@ -2101,10 +2101,10 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    "Fim do curso"
+   ],
    "metadata": {}
   }
  ],
