--- a/Data_Science-analises_para_saude_e_medicina/Data_Science_e_Saude.ipynb
+++ b/Data_Science-analises_para_saude_e_medicina/Data_Science_e_Saude.ipynb
@@ -3172,6 +3172,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Nos últimos 20 dias destes dados, DOBROU os casos confirmados."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 82,
    "source": [
